# platform_monorepo

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .mcp.json  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RESUME.md  Taskfile.yml  docker-compose.yml  helmfile.yaml  k3d-mewtwo.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  backlog-worker.md  code-reviewer.md  meta-optimizer.md  ontologist.md  ops.md  platform-dev.md  policy-engineer.md  spec-writer.md  test-engineer.md
.claude/autonomous/: factory.md  guardrails.md  ledger.md  lessons.md  worker.md
.claude/commands/: skill-optimize.md
.claude/skills/: REGISTRY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-images.yml  lint-charts.yml  release.yml
_archive/: argocd-applicationset.yaml  argocd-repo-secret.yaml  docker-compose.gitlab.yml  gitlab-proxy.yaml  namespace-init.yaml
_archive/n8n/: n8n.yaml  postgres.yaml
_archive/terraform/: .gitignore  outputs.tf  variables.tf  versions.tf
agents/: agent-ops.yaml  data-engineer.yaml  developer.yaml  mlops.yaml  platform-admin.yaml
agents/_shared/: llm-ollama.yaml  mcp-genai.yaml
agents/data-engineer/: agent.yaml
agents/developer/: agent.yaml
ci-catalog/: .gitlab-ci.example.yml
data/: langfuse-models.json  seed-prompts.json
docs/: agentops-checklist.md  architecture.md  environments.md
envs/: global.env  secrets.env.example
manifests/: argocd-applicationset.yaml  argocd-appprojects.yaml  argocd-apps-genai.yaml  argocd-apps-platform.yaml  gitlab-ce.yaml  gitlab-runner.yaml
mcp-servers/: catalog.yaml
mcp-servers/metamcp-admin/: pyproject.toml
mcp-servers/metamcp-admin/src/metamcp_admin/: server.py
ontology/: platform-instances.ttl  platform-reasoned.ttl  platform-shapes.ttl  platform.ttl
pipelines/: model-deploy-pipeline.yaml
repo-template/: .env.example  .gitlab-ci.yml  Dockerfile  Taskfile.yml  docker-compose.yml
scripts/: agent-autonomy-schema.sql  agent-benchmark.py  agent-lint.py  agentops-policy.py  agentspec-to-kagent.py  benchmark.py  bootstrap-crds.sh  build-images.sh  compliance-to-mlflow.py  config-gen.py  dashboard.py  datahub-domains.py  datahub-ingest.sh  datahub-lineage.py  datahub-quality.py  datahub-yt-governance.py  demo-mlops.py  drift_monitor.py  ensure-colima.sh  ensure-secrets.sh  eval-board.py  eval-gate.py  eval-triad.py  gen-mcp-secrets.sh  gitlab-bootstrap.sh  init-secrets.sh  langfuse-metrics.py  langfuse-setup.sh  log-promotion.py  mcp-tools.sh  metrics.sh  migrate-mlflow-to-pg.py  n8n-import-all.sh  n8n-import-workflows.sh  n8n-init-secrets.sh  n8n-promote.sh  n8n-setup-api.sh  n8n-setup.sh  n8n-verify.sh  onto-drift.py  (+23 more)
services/agent-gateway/: Dockerfile  Taskfile.yml  pyproject.toml
services/agent-gateway/namespaces/: data.yaml
services/agent-gateway/src/agent_gateway/: __init__.py  agent_lookup.py  composer.py  config.py  embeddings.py  main.py  mcp_discovery.py  mcp_proxy.py  mcp_recommender.py  mcp_server.py  metamcp_client.py  models.py  namespace_registry.py  registry.py  skill_lookup.py  skills_registry.py
services/agent-gateway/src/agent_gateway/agentspec/: loader.py  pipeline_loader.py  sync.py
services/agent-gateway/src/agent_gateway/benchmark/: gap_analysis.py  optimizer.py  regression.py  results.py  runner.py
services/agent-gateway/src/agent_gateway/routers/: agents.py  chat.py  delegation.py  factory.py  mcp.py  mcp_proxy.py  promotions.py  registry.py  sandbox.py  schedule.py  skills.py
services/agent-gateway/src/agent_gateway/runtimes/: __init__.py  adapter.py  base.py  claude_code.py  http.py  n8n.py  sandbox.py
services/agent-gateway/src/agent_gateway/store/: __init__.py  agents.py  db.py  deployments.py  environments.py  mcp_servers.py  seed.py  skills.py
services/agent-gateway/src/agent_gateway/workflows/: export.py  import_.py  validation.py
services/agent-gateway/tests/: conftest.py  test_agent_yamls.py  test_agents_api.py  test_agentspec_loader.py  test_benchmark.py  test_chat.py  test_delegation.py  test_embeddings.py  test_eval_datasets.py  test_factory_health.py  test_gap_analysis.py  test_http_runtime.py  test_mcp_discovery.py  test_mcp_recommender.py  test_mcp_search.py  test_mcp_server.py  test_metamcp_client.py  test_namespace_registry.py  test_pipeline_yamls.py  test_prompt_optimizer.py  test_registry.py  test_regression.py  test_skill_evolution.py  test_skill_yamls.py  test_skills_api.py  test_skills_registry.py  test_sync.py  test_workflow_validation.py  test_workflows.py
services/claude-runner/: pyproject.toml
services/claude-runner/claude_runner/: server.py
services/datahub-obsidian-source/: pyproject.toml
services/datahub-obsidian-source/src/obsidian_source/: __init__.py  source.py
services/datahub-obsidian-source/tests/: test_source.py
services/n8n-datahub-bridge/: Dockerfile  pyproject.toml
services/n8n-datahub-bridge/src/bridge/: config.py  emitter.py  main.py  models.py
services/n8n-datahub-bridge/tests/: test_emitter.py  test_models.py
services/yt-ingest/: pyproject.toml
services/yt-ingest/yt_ingest/: server.py
skills/: agent-management.yaml  benchmark-runner.yaml  code-generation.yaml  data-ingestion.yaml  documentation.yaml  kubernetes-ops.yaml  mlflow-tracking.yaml  n8n-workflow-ops.yaml  prompt-engineering.yaml  security-audit.yaml  skill-management.yaml  vector-store-ops.yaml
taskfiles/: agents.yml  arch.yml  argocd.yml  claude.yml  compose.yml  env.yml  factory.yml  genai-helm.yml  gitlab.yml  helm.yml  k3d.yml  k8s.yml  mcp.yml  mlops.yml  n8n.yml  quality.yml  runner.yml  sandbox.yml  status.yml  uv.yml  workflows.yml  yt.yml
terraform/: main.tf
(+486 files in other folders)
