[project]
name = "genai-mlops"
version = "0.2.0"
description = "GenAI MLOps stack — n8n + MLflow local platform"
requires-python = ">=3.10"
dependencies = [
    "gepa>=0.0.26",
    "litellm>=1.81.16",
    "mlflow>=3.5",
    "openai>=2.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-xvs"
markers = [
    "integration: tests requiring live stack (n8n, LiteLLM, Ollama)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (formatter handles it)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
