[project]
name = "metamcp-admin"
version = "0.1.0"
description = "MCP server for managing MetaMCP: CRUD servers, namespaces, endpoints, pod ops"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0,<1.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
metamcp-admin = "metamcp_admin.server:main"
