[project]
name = "claude-runner"
version = "0.1.0"
description = "HTTP trigger service for headless Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[tool.hatch.build.targets.wheel]
packages = ["claude_runner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
