[project]
name = "yt-ingest"
version = "0.1.0"
description = "YouTube playlist extraction service — metadata + transcripts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "yt-dlp>=2025.3",
    "youtube-transcript-api>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["yt_ingest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120
